# CppADCodeGen

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README  README.md  aclocal.m4  build.sh  configure  configure.ac  doc.omh.in  doxyfile.in  makefile.am  makefile.in  test.sh
example/: CMakeLists.txt  abort_recording.cpp  abs.cpp  acos.cpp  ad_assign.cpp  ad_ctor.cpp  ad_fun.cpp  ad_in_c.cpp  add.cpp  add_eq.cpp  asin.cpp  atan.cpp  atan2.cpp  atan_2.cpp  base_adolc.hpp  base_alloc.hpp  base_require.cpp  bender_quad.cpp  bool_fun.cpp  capacity_taylor.cpp  change_const.cpp  check_numeric_type.cpp  check_simple_vector.cpp  checkpoint.cpp  compare.cpp  compare_change.cpp  complex_poly.cpp  cond_exp.cpp  conj_grad.cpp  copy_ad.cpp  copy_base.cpp  cos.cpp  cosh.cpp  cppad_vector.cpp  default.cpp  div.cpp  div_eq.cpp  dynamic_linux.cpp  eigen_array.cpp  eigen_det.cpp  (+115 more)
include/: CMakeLists.txt
include/cppad/cg/: abstract_atomic_fun.hpp  argument.hpp  arithmetic.hpp  arithmetic_ad.hpp  arithmetic_assign.hpp  array_id_compresser.hpp  array_view.hpp  array_wrapper.hpp  atomic_dependency_locator.hpp  atomic_fun.hpp  atomic_fun_bridge.hpp  base_abstract_atomic_fun.hpp  base_double.hpp  base_float.hpp  bidir_graph.hpp  cg.hpp  code_handler.hpp  code_handler_impl.hpp  code_handler_loops.hpp  code_handler_vector.hpp  collect_variable.hpp  compare.hpp  cond_exp_op.hpp  cppadcg.hpp  cppadcg_assert.hpp  custom_position.hpp  declare_cg.hpp  declare_cg_loops.hpp  default.hpp  evaluator.hpp  evaluator_ad.hpp  evaluator_adcg.hpp  evaluator_adolc.hpp  evaluator_cg.hpp  evaluator_solve.hpp  exception.hpp  graph_mod.hpp  identical.hpp  job_timer.hpp  language.hpp  (+18 more)
include/cppad/extra/: declare_extra.hpp  extra.hpp  sparse_forjac_hessian.hpp  sparsity.hpp
include/cppadcg/: cg.hpp  cg_abstract_atomic_fun.hpp  cg_argument.hpp  cg_arithmetic.hpp  cg_arithmetic_assign.hpp  cg_array_id_compresser.hpp  cg_atomic_dependency_locator.hpp  cg_atomic_fun.hpp  cg_atomic_fun_bridge.hpp  cg_base_abstract_atomic_fun.hpp  cg_base_double.hpp  cg_cg.hpp  cg_code_handler.hpp  cg_code_handler_loops.hpp  cg_compare.hpp  cg_cond_exp_op.hpp  cg_cppadcg_assert.hpp  cg_custom_position.hpp  cg_debug.hpp  cg_declare_cg.hpp  cg_declare_cg_loops.hpp  cg_default.hpp  cg_evaluator.hpp  cg_exception.hpp  cg_graph_mod.hpp  cg_identical.hpp  cg_job_time.hpp  cg_job_timer.hpp  cg_language.hpp  cg_math.hpp  cg_math_other.hpp  cg_nan.hpp  cg_operation.hpp  cg_operation_node.hpp  cg_operation_path.hpp  cg_ordered.hpp  cg_range.hpp  cg_scope_path_element.hpp  cg_smart_containers.hpp  cg_solver.hpp  (+7 more)
include/cppadcg/c/: cg_c_lang_atomic_fun.hpp  cg_c_lang_custom_var_name_gen.hpp  cg_c_lang_default_hessian_var_name_gen.hpp  cg_c_lang_default_reverse2_var_name_gen.hpp  cg_c_lang_default_var_name_gen.hpp  cg_c_language.hpp  cg_c_language_arrays.hpp  cg_c_language_double.hpp  cg_c_language_index_patterns.hpp
include/cppadcg/dae_index_reduction/: cg_bipartite.hpp  cg_dae_equation_info.hpp  cg_dae_index_reduction.hpp  cg_dae_var_info.hpp  cg_dummy_deriv.hpp  cg_pantelides.hpp  cg_time_diff.hpp
include/cppadcg/dynamic_lib/: cg_ar_archiver.hpp  cg_archiver.hpp  cg_atomic_lib_model.hpp  cg_c_lang_compile_dynamic_helper.hpp  cg_c_lang_compile_dynamic_helper_impl.hpp  cg_c_lang_compile_model_helper.hpp  cg_c_lang_compile_model_helper_for0.hpp  cg_c_lang_compile_model_helper_for1.hpp  cg_c_lang_compile_model_helper_hes.hpp  cg_c_lang_compile_model_helper_impl.hpp  cg_c_lang_compile_model_helper_jac.hpp  cg_c_lang_compile_model_helper_loops.hpp  cg_c_lang_compile_model_helper_rev1.hpp  cg_c_lang_compile_model_helper_rev2.hpp  cg_c_lang_compiler.hpp  cg_dynamiclib.hpp  cg_dynamiclib_model.hpp  cg_gcc_compiler.hpp  cg_system.hpp
include/cppadcg/model/: cg_atomic_external_function_wrapper.hpp  cg_atomic_generic_model.hpp  cg_external_function_wrapper.hpp  cg_functor_generic_model.hpp  (+18 more)
pkgconfig/: CMakeLists.txt  cppad-uninstalled.pc.in  cppad.pc.in  cppadcg-uninstalled.pc.in  cppadcg.pc.in
test/: CMakeLists.txt  CppADCGDynamicAtomicNestedTest.hpp  CppADCGDynamicAtomicTest.hpp  CppADCGDynamicTest.hpp  CppADCGOperationTest.hpp  CppADCGOperationTestImpl.hpp  CppADCGTest.hpp  TestException.cpp  TestException.hpp  abs.cpp  abs.hpp  acos.cpp  acos.hpp  add.cpp  add.hpp  asin.cpp  asin.hpp  assign.cpp  atan.cpp  atan.hpp  atan_2.cpp  atan_2.hpp  compare_change.cpp  cond_exp.cpp  cos.cpp  cos.hpp  cosh.cpp  cosh.hpp  div.cpp  div.hpp  div_mul.cpp  div_mul.hpp  dynamic.cpp  dynamic_atomic.cpp  dynamic_atomic_2.cpp  dynamic_forward_reverse.cpp  exp.cpp  exp.hpp  gccCompilerFlags.hpp  gcc_load_dynamic.cpp  (+23 more)
test/cppadcg/: CMakeLists.txt  CppADCGDynamicAtomicNestedTest.hpp  CppADCGDynamicAtomicTest.hpp  CppADCGDynamicTest.hpp  CppADCGModelTest.hpp  CppADCGOperationTest.hpp  CppADCGOperationTestImpl.hpp  handler_reset.cpp  inputstream.cpp  mult_sparsity_pattern.cpp  temporary.cpp
test/dae_index_reduction/: CMakeLists.txt  CppADCGIndexReductionTest.hpp  distillation.hpp  dummy_derivative.cpp  dummy_derivative_destil.cpp  pantelides.cpp  pendulum.hpp
test/dep_pattern_matcher/: CppADCGPatternTest.hpp  pattern_matcher.cpp
test/dynamiclib/: CMakeLists.txt  dynamic.cpp  dynamic_atomic.cpp  dynamic_atomic_2.cpp  dynamic_atomic_3.cpp  dynamic_forward_reverse.cpp  dynamic_forward_reverse_2.cpp
test/models/: CMakeLists.txt  cstr.cpp  cstr.hpp  cstr_2.cpp  dynamic_atomic_cstr.cpp
test/operations/: abs.hpp  acos.hpp  add.cpp  add.hpp  asin.hpp  assign.hpp  atan_2.hpp  compare_change.cpp  compare_change.hpp  cond_exp.hpp  cos.hpp  cosh.hpp  div.hpp  log.hpp  log_10.hpp  mul.hpp  parameter.hpp  sin.hpp  tan.hpp  unary.hpp
test/patterns/: CMakeLists.txt  CppADCGPatternTest.hpp  cstr_collocation.cpp  hessian_with_loops.cpp  pattern_matcher.cpp
test/solve/: CMakeLists.txt  CppADCGSolveTest.hpp  solve_add.cpp  solve_cosh.cpp  solve_div.cpp  solve_div_mul.cpp  solve_exp.cpp  solve_log.cpp  solve_log_10.cpp  solve_mul.cpp  solve_pow.cpp  solve_sinh.cpp  solve_sqrt.cpp  solve_sub.cpp  solve_tanh.cpp  solve_unary.cpp  test_solve.cpp  test_solve.hpp
(+2280 files in other folders)
